--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
         *{
             box-sizing: border-box;
         }
+
 body{
     width: 100%;
     height: 100%;
@@ -36,13 +37,39 @@ body{
     display: flex;    
     justify-content: center;
     font-weight: bold;
+    user-select: none;
+    cursor: pointer;
+}
+.timer{
+    width: 20vh;
+    height: 20vh;
+    border: 7px solid;
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    border-radius: 50%;
+    font-size: 50px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-family: sans-serif;
+
+}
+.box.selected{
+    background-color: skyblue;
+    color: navy;
 }
     </style>
 </head>
 <body>
     <div class="container">
         <!-- boxes will be created programatically -->
+        
     </div>
+    <div class="timer">
+        10
+    </div>
+    
     <script src="./game.js"></script>
 </body>
 </html>
