giving the score in stars

--- a/index.html
+++ b/index.html
@@ -99,7 +99,12 @@ body{
     width: 5vh;
     height: 0%;
     background: red;
-    
+}
+img{
+    display: inline-block;
+    width: 30px;
+    height: 30px;
+    margin-right: 5px;
 }
     </style>
 </head>
